samples/_failures_safe/1761531052_749fb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75cfe4ba.c: In function ‘main’:
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected expression at end of input
  154 |                         printf("  %s: %s\n", entries[i].timestamp,
      |                         ^~~~~~
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75cfe4ba.c:154:25: error: expected declaration or statement at end of input
